# EngageX

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  run.sh
app/: config.py  database.py  main.py
app/bot/: __init__.py  discord_bot.py
app/logic/: __init__.py  decay.py  fraud.py  quests.py  reengage.py  referral.py  reputation.py  scoring.py  streaks.py
app/models/: __init__.py  models.py
app/n8n/: fraud_detection.json  streak_decay_cron.json
app/routes/: api.py
tests/: conftest.py  test_logic.py
